--- a/PBSS/positivebehaviour/templates/positivebehaviour/index.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/index.html
@@ -11,8 +11,8 @@
 
                         </div>
                         <div class="intro-text"><br><br>
-                            <div class="intro-lead-in">Hero Image</div>
-                            <div class="intro-heading">Description</div>
+                            <div class="intro-lead-in">POSITIVE BEHAVIOUR SUPPORT</div>
+                            <div class="intro-heading">Better understanding on data</div>
                         </div>
                     </div>
                 </div>
@@ -35,7 +35,7 @@
                         <div class="col-lg-12">
                             <h2>About us</h2>
                             <hr>
-                            <div class="intro">Lorem ipsum dolor sit amet</div>
+                            <div class="intro"><p></p></div>
                         </div>
                     </div>
                     <div class="row">
@@ -47,11 +47,11 @@
                                     </div>
                                     <div class="timeline-panel">
                                         <div class="timeline-heading">
-                                            <h4>2009-2011</h4>
-                                            <h4 class="subheading">Our Humble Beginnings</h4>
+                                            <h4></h4>
+                                            <h4 class="subheading">FBA Tool</h4>
                                         </div>
                                         <div class="timeline-body"><br>
-                                            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                            <p class="text-muted">Concentrate primarily on preventing the occurrence of an identified behaviour by avoiding or adapting the circumstances that usually trigger the behaviour. </p>
                                         </div>
                                     </div>
                                 </li>
@@ -61,11 +61,11 @@
                                     </div>
                                     <div class="timeline-panel">
                                         <div class="timeline-heading">
-                                            <h4>March 2011</h4>
-                                            <h4 class="subheading">An Agency is Born</h4>
+    {#                                            <h4>March 2011</h4>#}
+                                            <h4 class="subheading">Business Report</h4>
                                         </div>
                                         <div class="timeline-body"><br>
-                                            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                            <p class="text-muted">Filling a business report for 30 or more days that will link to FBA form that has been created earlier.</p>
                                         </div>
                                     </div>
                                 </li>
@@ -75,11 +75,11 @@
                                     </div>
                                     <div class="timeline-panel">
                                         <div class="timeline-heading">
-                                            <h4>December 2012</h4>
-                                            <h4 class="subheading">Transition to Full Service</h4>
+{#                                            <h4>December 2012</h4>#}
+                                            <h4 class="subheading">Better understanding</h4>
                                         </div>
                                         <div class="timeline-body"><br>
-                                            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                            <p class="text-muted">Integrating all the collected data into graphs for the visualising and understanding the statistics of the client. </p>
                                         </div>
                                     </div>
                                 </li>
@@ -89,11 +89,11 @@
                                     </div>
                                     <div class="timeline-panel">
                                         <div class="timeline-heading">
-                                            <h4>July 2014</h4>
-                                            <h4 class="subheading">Phase Two Expansion</h4>
+{#                                            <h4>July 2014</h4>#}
+                                            <h4 class="subheading">End Summary</h4>
                                         </div>
                                         <div class="timeline-body"><br>
-                                            <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                            <p class="text-muted">Provides end summary based on  antecedents, behaviour and consequences with triggers and other behavioural information.</p>
                                         </div>
                                     </div>
                                 </li>
@@ -117,34 +117,33 @@
                         <div class="col-lg-12">
                             <h2>Services</h2>
                             <hr>
-                            <div class="intro">Lorem ipsum dolor sit amet</div>
+                            <div class="intro">Providing unique experience based on the user role</div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-sm-3 box-item">
-                            <h3 class="blue">Text Heading 3</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                            <h3 class="blue">Business Leader</h3>
+                            <p>Based on the input on the accounts a business report along with the strategy will be created and the business leader can analyse it.</p>
                             <button type="submit" class="btn btn-2 ">More</button>
                         </div>
                         <div class="col-sm-3 box-item">
-                            <h3 class="blue">Text Heading 3</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                            <h3 class="blue">Team leader</h3>
+                            <p>A structured action plan for the team leaders wo will be supported by a support worker to carry out the plan. </p>
                             <button type="submit" class="btn btn-2 ">More</button>
                         </div>
                         <div class="col-sm-3 box-item">
-                            <h3 class="blue">Text Heading 3</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                            <h3 class="blue">Support worker</h3>
+                            <p>Support workers can register there clients behaviour under there profile and can be used for references.</p>
                             <button type="submit" class="btn btn-2 ">More</button>
                         </div>
                         <div class="col-sm-3 box-item">
-                            <h3 class="blue">Text Heading 3</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                            <h3 class="blue">Personal use</h3>
+                            <p>A free user can use the tool to someones behaviour and print the behaviour strategy for free from the app.</p>
                             <button type="submit" class="btn btn-2 ">More</button>
                         </div>
+
+
+
                     </div>
                 </div>
             </section>
@@ -156,7 +155,7 @@
                         <div class="col-lg-12">
                             <h2>FBA Form</h2>
                             <hr>
-                            <div class="intro">Lorem ipsum dolor sit amet</div>
+                            <div class="intro">  </div>
                         </div>
                     </div>
                     <div class="row">
@@ -164,9 +163,8 @@
                             <img src="{% static 'images/checklist.png' %}" alt="checklist" class="checklist">
                         </div>
                         <div class="col-sm-6 box-item">
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
-                            <a class="btn btn-2 btn-sm" href="/fbaform/">Access Form</a>
+                            <p>Functional behaviour assessment tool analyse the behaviour of an individual by there actions, we are providing a tool for everyone who wants to know more about the behaviour of an individual </p>
+                            <a class="btn btn-2 btn-sm" href="/fbaform/">Access FBA Form</a>
                         </div>
                     </div>
                 </div>
@@ -176,16 +174,16 @@
             <!-- ////////////Content Box 02 -->
     <section id="portal" class="box-content box-2 box-style">
                 <div class="container">
-                    <div class="row">
-                        <blockquote>Block Qoute for information and Sign Up login Button.</blockquote>
+                    <div class="row heading">
+                        <div class="col-lg-12">
+                            <h2>Create account</h2>
+                            <hr>
+                            <div class="intro">Be a part of positive behaviour support</div>
+                        </div>
                     </div>
-                    <div class="container-fluid">
-                        <div class="row">
                     <div class="col text-center">
                         <a class="btn btn-1 btn-sm" href="{% url 'register' %}">Signup</a>
                         <a class="btn btn-1 btn-sm" href="{% url 'login' %}">Signin</a>
-                    </div></div>
-                    </div>
                 </div>
             </section>
             <!-- ////////////Content Box 03 -->
@@ -200,18 +198,18 @@
                         <div class="col-lg-12">
                             <h2>Contact us</h2>
                             <hr>
-                            <div class="intro">Lorem ipsum dolor sit amet</div>
+                            <div class="intro">The support team is here to help, drop us a line.</div>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-4 ">
                             <div class="row box-item">
-                                <h3>Complete the Submission Form</h3>
-                                <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard</p>
+                                <h3>How can we help?</h3>
+                                <p>Please select a topic that you are not able to find according to your need. click the contact form and complete the required information we will get back to you as soon as possible.</p>
                                 <h3>Or Just Make a Call</h3>
-                                <p>+6221 888 888 90 <br>
-                                    +6221 888 88891</p>
-                                <p>info@yourdomain.com</p>
+                                <p>+61 430 299 865 <br>
+                                    +61 411 420 495</p>
+                                <p>info@positivebehaviourPBS.com</p>
                             </div>
                         </div>
                         <div class="col-md-8">
@@ -261,7 +259,7 @@
                     <div class="cd-testimonials-wrapper cd-container">
                         <ul class="cd-testimonials">
                             <li>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                                <p>FBA tool has been implemented successfully on our firm the understanding of the support workers on client has been improved </p>
                                 <div class="cd-author">
                                     <img src="{% static 'images/avatar.png' %}" alt="">
                                     <ul class="cd-author-info">
