--- a/PBSS/positivebehaviour/templates/positivebehaviour/base.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/base.html
@@ -95,7 +95,7 @@
 					<div class="col-md-4 col-footer footer-1">
                         <div class=""><h6>PBSS</h6></div>
 						<div class="content">
-							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, dolore magna aliquam erat volutpat. </p>
+							<p>A PBS plan will tell the people what needs to be done proactively to prevent the challenging behaviour. Proactive strategy will improve the quality of life by supporting throughout the process. Our web application will aid all the people who want to proactively prevent a challenging behaviour by submitting a Functional Behaviour Assessment (FBA) form which will be analysed by the team leader and strategies will be developed to counter the behaviour.  </p>
                         </div>
 					</div>
 
