change to timeline body

--- a/PBSS/positivebehaviour/templates/positivebehaviour/index.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/index.html
@@ -11,8 +11,8 @@
 
                         </div>
                         <div class="intro-text"><br><br>
-                            <div class="intro-lead-in">POSITIVE BEHAVIOUR SUPPORT</div>
-                            <div class="intro-heading">Better understanding on data</div>
+                            <div class="intro-heading">POSITIVE BEHAVIOUR SUPPORT</div>
+                            <div class="intro-lead-in">Better understanding on data</div>
                         </div>
                     </div>
                 </div>
@@ -60,7 +60,7 @@
                                         <img class="img-circle img-responsive" src="{% static 'images/5.jpg' %}" alt="">
                                     </div>
                                     <div class="timeline-panel">
-                                        <div class="timeline-heading">
+                                        <br><br><div class="timeline-heading">
     {#                                            <h4>March 2011</h4>#}
                                             <h4 class="subheading">Business Report</h4>
                                         </div>
@@ -74,7 +74,7 @@
                                         <img class="img-circle img-responsive" src="{% static 'images/6.jpg' %}" alt="">
                                     </div>
                                     <div class="timeline-panel">
-                                        <div class="timeline-heading">
+                                       <br><br> <div class="timeline-heading">
 {#                                            <h4>December 2012</h4>#}
                                             <h4 class="subheading">Better understanding</h4>
                                         </div>
@@ -88,7 +88,7 @@
                                         <img class="img-circle img-responsive" src="{% static 'images/7.jpg' %}" alt="">
                                     </div>
                                     <div class="timeline-panel">
-                                        <div class="timeline-heading">
+                                      <br><br>  <div class="timeline-heading">
 {#                                            <h4>July 2014</h4>#}
                                             <h4 class="subheading">End Summary</h4>
                                         </div>
