--- a/PBSS/positivebehaviour/static/css/style.css
+++ b/PBSS/positivebehaviour/static/css/style.css
@@ -103,8 +103,8 @@ hr { margin: 15px auto; padding: 0; max-width: 130px;border: 0; border-top: soli
 }
 header{text-align: center;color: #fff;background: url(/static/images/heroimage.jpg) no-repeat scroll center center ;-webkit-background-size: cover;-moz-background-size: cover;background-size: cover;-o-background-size: cover;height: 650px; }
 header img{display: block; margin: 200px auto  50px auto;}
-header .intro-text .intro-heading {text-transform: uppercase;font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;font-weight: 700;font-size: 50px;}
-header .intro-text .intro-lead-in {margin-bottom: 30px; font-family:"Montserrat", Helvetica,Arial;font-size: 42px; margin-top: 5%;}
+header .intro-text .intro-heading {text-transform: uppercase;font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;font-weight: 700;font-size: 50px; margin-top: 5%;}
+header .intro-text .intro-lead-in {margin-bottom: 30px; font-family:"Montserrat", Helvetica,Arial;font-size: 42px; margin-top: 1%;}
 @media(min-width:635px) {
     header .intro-text {
         padding-bottom: 80px;
