--- a/PBSS/freefbaform/templates/freefbaform/fbabase.html
+++ b/PBSS/freefbaform/templates/freefbaform/fbabase.html
@@ -19,6 +19,8 @@
           href="{% static 'css/our-team.css' %}">
     <link rel="stylesheet"
           href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+ <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+
 
     {% if title %}
         <title>Positive Behaviour - {{ title }}</title>
@@ -145,7 +147,9 @@
 	<script src="{% static 'js/jquery.easing.min.js'%}"></script>
 	<script src="{% static 'js/classie.js'%}"></script>
 	<script src="{% static 'js/cbpAnimatedHeader.js'%}"></script>
-	<!-- Footer -->
+	<script src="{% static 'js/option.js'%}"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <!-- Footer -->
 
 </body>
 </html>
