--- a/PBSS/freefbaform/templates/freefbaform/freefbaform.html
+++ b/PBSS/freefbaform/templates/freefbaform/freefbaform.html
@@ -2,33 +2,135 @@
 {% block content %}
         {% load static %}
 
-     <div id="page-content" class="index-page">
+    <div id="page-content" class="index-page container-fluid">
                 <section id="" class="box-content box-1" style="background: white;">
                     <div class="container">
                         <div class="row heading">
                         <div class="col-lg-12">
                             <h2>FBA form</h2>
                             <hr>
-                            <div class="intro">Lorem ipsum dolor sit amet</div>
+                        </div>
+                    </div><button class="btn btn-3 btn-sm" onclick="myFunction()" name="print" id="print" style="float: right;">Print</button>
+                            <div class="row">
+                        <div class="col-md-4">
+                            <div class="row box-item"><br><br>
+                                <p style="text-align: left; line-height: 2; padding-top: 8%; margin: 4%;">Functional behaviour assessment tool analyse the behaviour of an individual by there actions, we are providing a tool for everyone who wants to know more about the behaviour of an individual.</p>
+                            </div>
+                        </div>
+                        <div class="col-md-8">
+                            <div id="contact-form">
+                                <form name="form1" method="post">
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                            <input type="text" class="form-control input-lg" name="name" id="name" placeholder="Enter name" required="required" />
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <input type="email" class="form-control input-lg" name="email" id="email" placeholder="name@example.com" required="required" />
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                            <input type="text" class="form-control input-lg" name="name" id="name" placeholder="Gender" required="required" />
+                                            </div>
+                                        </div>
+                                        <div class="col-md-6">
+                                            <div class="form-group">
+                                                <input type="tel" class="form-control input-lg" name="phonenumber" id="phonenumber" pattern="^\d{4}-\d{3}-\d{4}$" placeholder="Mobile Number" required="required" />
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <div class="form-group">
+                                                <input type="number" class="form-control input-lg" name="age" id="age" min="5" max="100" placeholder="Age" required="required" />
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-md-12">
+                                            <div class="form-group">
+                                                <textarea name="address" id="message" class="form-control" rows="2" cols="25" required="required"
+                                                placeholder="Address"></textarea>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
                         </div>
                     </div>
                         <div class="row">
-                            <div class="col-sm-4 box-item">
+                            <div class="col-sm-6 box-item">
                                 <div class="col-lg-12"><br><br>
                                 <h2>Behaviour</h2>
                                 <hr>
+                                    <form>
+                                        <div class="intro" style="text-align: left; line-height: 2;">1. When the individual experiences, or is engaged in, one of the following:</div>
+                                       <select id="behaviour" class="select-box">
+                                    <option value="behaviour1">--Select an Item--</option>
+                                    <option value="behaviour2">Is in the community</option>
+                                    <option value="behaviour2">Has recently been disciplined</option>
+                                    <option value="behaviour2">Is engaged in an activity or task they dislike</option>
+                                      </select>
+
+                                        <div class="intro" style="text-align: left; line-height: 2;">2. Often it’s when someone:</div>
+                                        <select id="boptions" class="select-box">
+                                        <option value="">-- select one -- </option>
+                                    </select>
+                                        <div class="intro" style="text-align: left; line-height: 2;">3. In particular, an:</div>
+                                        <select id="ageoptions" class="select-box">
+                                        <option value="">-- select one -- </option>
+                                    </select>
+                                        <div class="intro" style="text-align: left; line-height: 2;">4. Interacts with the individual in the following way:</div>
+                                        <select id="interactionoptions" class="select-box">
+                                        <option value="">-- select one -- </option>
+                                    </select>
+                                    </form>
+
                             </div>
                             </div>
-                            <div class="col-sm-4 box-item">
+                            <div class="col-sm-6 box-item">
                                 <div class="col-lg-12"><br><br>
                                 <h2>Anticident</h2>
                                 <hr>
+                                    <form>
+                                       <div class="intro" style="text-align: left; line-height: 2;">5. What do you see the observe him/her doing?</div>
+                                        <select id="observationoptions" class="select-box">
+                                        <option value="">-- select one -- </option>
+                                    </select>
+                                        <div class="intro" style="text-align: left; line-height: 2;">6. What changes as a result of the individual engaging in this behaviour?</div>
+                                        <select id="enganingoptions" class="select-box">
+                                        <option value="">-- select one -- </option>
+                                    </select>
+                                         <div class="intro" style="text-align: left; line-height: 2;">7. Select your response from the list below.</div>
+                                        <select id="responseoptions" class="select-box">
+                                        <option value="">-- select one -- </option>
+                                    </select>
+                                    </form>
                             </div>
                             </div>
-                            <div class="col-sm-4 box-item">
+                            <div class="col-sm-6 box-item">
                                   <div class="col-lg-12"><br><br>
                                 <h2>Consequences</h2>
                                 <hr>
+                                <form>
+                                     <div class="intro" style="text-align: left; line-height: 2;">8. Select your response from the list below.</div>
+                                        <select id="consequensesoptions" class="select-box">
+                                        <option value="">-- select one -- </option>
+                                    </select>
+                                         <div class="intro" style="text-align: left; line-height: 2;">9. What behaviour would you accept as an alternative while teaching the desired behaviour?</div>
+                                        <select id="alternativeoptions" class="select-box">
+                                        <option value="">-- select one -- </option>
+                                    </select>
+                                        <div class="intro" style="text-align: left; line-height: 2;">10. Function - The function of behaviour is the reason people behave in a certain way.</div>
+                                        <select id="functionoptions" class="select-box">
+                                        <option value="">-- select one -- </option>
+                                    </select>
+                                </form>
                             </div>
                             </div>
                         <script>
