--- a/PBSS/users/templates/users/edit_profile.html
+++ b/PBSS/users/templates/users/edit_profile.html
@@ -8,7 +8,16 @@
             <div class="row">
                 <div class="col-mt-3">
                 <div class="content-section">
+                    <div class="content-section">
+                        <div class="media">
+                            <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
+                            <div  class="media-body">
+                                <h2 class="account-heading">{{ user.username }}</h2>
+                                <p class="text-secondary">{{ user.email }}</p>
 
+                            </div>
+                        </div>
+                    </div>
                     <form method="POST" enctype="multipart/form-data">
                         {% csrf_token %}
                         <fieldset class="form-group">
