--- a/PBSS/freefbaform/templates/freefbaform/fbabase.html
+++ b/PBSS/freefbaform/templates/freefbaform/fbabase.html
@@ -58,7 +58,7 @@
 					<div class="col-md-4 col-footer footer-1">
 						<div class=""><h6>PBSS</h6></div>
 						<div class="content">
-							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, dolore magna aliquam erat volutpat. </p>
+							<p>A PBS plan will tell the people what needs to be done proactively to prevent the challenging behaviour. Proactive strategy will improve the quality of life by supporting throughout the process. Our web application will aid all the people who want to proactively prevent a challenging behaviour by submitting a Functional Behaviour Assessment (FBA) form which will be analysed by the team leader and strategies will be developed to counter the behaviour.  </p>
                         </div>
 					</div>
 
@@ -77,9 +77,9 @@
 
 
                     <div class="col-md-4 col-footer footer-2">
-						<div class=""><h6>Your Email</h6></div>
+						<div class=""><h6>Subscribe us</h6></div>
 						<div class="content">
-							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Consectetuer adipiscing elit, dolore magna aliquam erat volutpat. </p>
+							<p> </p>
 							<div class="subscribe-form" >
 								<form method="get" action="/search" id="subscribe">
 									<div class="form-group">
@@ -97,7 +97,7 @@
 			<div class="container-fluid">
 				<div class="row">
 					<div class="col-md-4">
-						<p>Copyright &copy; PBSS - Designed by <a href="#"></a></p>
+						<p>Copyright &copy; PBSS - Designed by Team 03<a href="#"></a></p>
 					</div>
 					<div class="col-md-4">
 						<ul class="list-inline">
