--- a/PBSS/freefbaform/templates/freefbaform/freefbaform.html
+++ b/PBSS/freefbaform/templates/freefbaform/freefbaform.html
@@ -76,7 +76,6 @@
                                     <option value="behaviour2">Has recently been disciplined</option>
                                     <option value="behaviour2">Is engaged in an activity or task they dislike</option>
                                       </select>
-
                                         <div class="intro" style="text-align: left; line-height: 2;">2. Often it’s when someone:</div>
                                         <select id="boptions" class="select-box">
                                         <option value="">-- select one -- </option>
@@ -89,15 +88,9 @@
                                         <select id="interactionoptions" class="select-box">
                                         <option value="">-- select one -- </option>
                                     </select>
-                                    </form>
 
-                            </div>
-                            </div>
-                            <div class="col-sm-6 box-item">
-                                <div class="col-lg-12"><br><br>
-                                <h2>Anticident</h2>
+                                       <br><br> <h2>Anticident</h2>
                                 <hr>
-                                    <form>
                                        <div class="intro" style="text-align: left; line-height: 2;">5. What do you see the observe him/her doing?</div>
                                         <select id="observationoptions" class="select-box">
                                         <option value="">-- select one -- </option>
@@ -110,14 +103,9 @@
                                         <select id="responseoptions" class="select-box">
                                         <option value="">-- select one -- </option>
                                     </select>
-                                    </form>
-                            </div>
-                            </div>
-                            <div class="col-sm-6 box-item">
-                                  <div class="col-lg-12"><br><br>
-                                <h2>Consequences</h2>
+
+                                        <br><br> <h2>Consequences</h2>
                                 <hr>
-                                <form>
                                      <div class="intro" style="text-align: left; line-height: 2;">8. Select your response from the list below.</div>
                                         <select id="consequensesoptions" class="select-box">
                                         <option value="">-- select one -- </option>
@@ -130,14 +118,29 @@
                                         <select id="functionoptions" class="select-box">
                                         <option value="">-- select one -- </option>
                                     </select>
-                                </form>
+                                    </form>
+
                             </div>
                             </div>
+<!--                            <div class="col-sm-6 box-item">-->
+<!--                                <div class="col-lg-12"><br><br>-->
+<!--                                <h2>Anticident</h2>-->
+<!--                                <hr>-->
+<!--                                    <form>-->
+
+<!--                                    </form>-->
+<!--                            </div>-->
+<!--                            </div>-->
+<!--                            <div class="col-sm-6 box-item">-->
+<!--                                  <div class="col-lg-12"><br><br>-->
+
+<!--                            </div>-->
+<!--                            </div>-->
                         <script>
                                 function myFunction() {
                                 window.print();
                                 }
-                                </script>
+                        </script>
                         </div>
                         <button class="btn btn-3 btn-sm" onclick="myFunction()" name="print" id="print" style="float: right;">Print</button>
                     </div>
