--- a/PBSS/positivebehaviour/templates/positivebehaviour/base.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/base.html
@@ -114,9 +114,9 @@
 
 
                     <div class="col-md-4 col-footer footer-2">
-						<div class=""><h6>Your Email</h6></div>
+						<div class=""><h6>Subscribe us</h6></div>
 						<div class="content">
-							<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Consectetuer adipiscing elit, dolore magna aliquam erat volutpat. </p>
+							<p></p>
 							<div class="subscribe-form" >
 								<form method="get" action="/search" id="subscribe">
 									<div class="form-group">
