--- a/PBSS/positivebehaviour/templates/positivebehaviour/index.html
+++ b/PBSS/positivebehaviour/templates/positivebehaviour/index.html
@@ -164,7 +164,7 @@
                         </div>
                         <div class="col-sm-6 box-item">
                             <p>Functional behaviour assessment tool analyse the behaviour of an individual by there actions, we are providing a tool for everyone who wants to know more about the behaviour of an individual </p>
-                            <a class="btn btn-2 btn-sm" href="/fbaform/">Access FBA Form</a>
+                            <br><br><a class="btn btn-3 btn-sm" href="/fbaform/">Access FBA Form</a>
                         </div>
                     </div>
                 </div>
