--- a/PBSS/users/templates/users/profile.html
+++ b/PBSS/users/templates/users/profile.html
@@ -24,7 +24,7 @@
                                 <h2 class="account-heading">{{ user.username }}</h2>
                                 <p class="text-secondary">{{ user.email }}</p>
                                  <a class="btn btn-3 btn-sm" href="{% url 'edit_profile' %}" >Edit Profile</a>
-                                <a class="btn btn-3 btn-sm" href="#" >BR Report</a>
+                                <a class="btn btn-3 btn-sm" href="{% url 'fbaform' %}" >BR Report</a>
                             </div>
                         </div>
                     </div>
