--- a/PBSS/users/templates/users/userbase.html
+++ b/PBSS/users/templates/users/userbase.html
@@ -68,9 +68,9 @@
                                 <ul class="footer-links">
                                       <li><a href="{% url 'index' %}">Home</a></li>
                                       <li><a href="#">About us</a></li>
-                                      <li><a href="#">Signin/Signup</a></li>
+                                      <li><a href="{% url 'register' %}">Signin/Signup</a></li>
                                       <li><a href="#">Services</a></li>
-                                      <li><a href="#">FBA Form</a></li>
+                                      <li><a href="{% url 'freefbaform' %}">FBA Form</a></li>
                                       <li><a href="#">Contact us</a></li>
                                 </ul>
                         </div>
