--- a/PBSS/freefbaform/templates/freefbaform/fbabase.html
+++ b/PBSS/freefbaform/templates/freefbaform/fbabase.html
@@ -35,7 +35,7 @@
         <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header page-scroll">
-                <a class="navbar-brand page-scroll" href="#page-top">PBSS</a>
+                <a class="navbar-brand page-scroll" href="{% url 'index' %}">PBSS</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -66,11 +66,11 @@
 						<div class="col-xs-6 col-md-4 col-footer footer-3">
                             <h6>Quick Links</h6>
                                 <ul class="footer-links">
-                                      <li><a href="#">Home</a></li>
+                                      <li><a href="{% url 'index' %}">Home</a></li>
                                       <li><a href="#">About us</a></li>
-                                      <li><a href="#">Signin/Signup</a></li>
+                                      <li><a href="{% url 'register' %}">Signin/Signup</a></li>
                                       <li><a href="#">Services</a></li>
-                                      <li><a href="#">FBA Form</a></li>
+                                      <li><a href="{% url 'freefbaform' %}">FBA Form</a></li>
                                       <li><a href="#">Contact us</a></li>
                                 </ul>
                         </div>
